--- a/package.json
+++ b/package.json
@@ -9,33 +9,41 @@
   },
   "private": true,
   "devDependencies": {
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.10.1",
-    "@nrwl/eslint-plugin-nx": "12.10.1",
-    "@nrwl/jest": "12.10.1",
-    "@nrwl/linter": "12.10.1",
-    "@nrwl/nest": "12.10.1",
-    "@nrwl/node": "12.10.1",
-    "@nrwl/tao": "12.10.1",
-    "@nrwl/workspace": "12.10.1",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@nrwl/cli": "13.8.5",
+    "@nrwl/eslint-plugin-nx": "13.8.5",
+    "@nrwl/jest": "13.8.5",
+    "@nrwl/linter": "13.8.5",
+    "@nrwl/nest": "^13.8.5",
+    "@nrwl/node": "13.8.5",
+    "@nrwl/tao": "13.8.5",
+    "@nrwl/workspace": "13.8.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.31.1",
-    "@typescript-eslint/parser": "~4.31.1",
-    "eslint": "7.22.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mongoose": "^6.2.5",
+    "nestjs": "^0.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.3",
+    "rxjs": "^7.0.0",
+    "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0"
   }
 }
