--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,24 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@rendu-tp0/api/core/pagination": [
+        "libs/api/core/pagination/src/index.ts"
+      ],
+      "@rendu-tp0/api/repository/error": [
+        "libs/api/repository/error/src/index.ts"
+      ],
+      "@rendu-tp0/api/validation/id": ["libs/api/validation/id/src/index.ts"],
+      "@rendu-tp0/common/resource/core": [
+        "libs/common/resource/core/src/index.ts"
+      ],
+      "@rendu-tp0/common/resource/equipe": [
+        "libs/common/resource/equipe/src/index.ts"
+      ],
+      "@rendu-tp0/common/resource/match": [
+        "libs/common/resource/match/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
